<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/general_settings">
        <com.jenzz.materialpreference.SwitchPreference
            android:key="@string/right_hand_mode_key"
            android:title="@string/right_hand_mode"
            android:summary="@string/right_hand_mode_summary"/>

        <com.jenzz.materialpreference.Preference
            android:key="@string/change_theme_key"
            android:title="@string/change_theme"/>
        <com.jenzz.materialpreference.Preference
            android:title="@string/sync_account"
            android:summary="@string/sync_account_summary"/>
        <com.jenzz.materialpreference.Preference
            android:title="@string/export_sd"
            android:summary="@string/export_sd_summary"/>
        <com.jenzz.materialpreference.Preference
            android:title="@string/import_sd"
            android:summary="@string/import_sd_summary"/>
    </com.jenzz.materialpreference.PreferenceCategory>
</PreferenceScreen>